--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,7 @@ jobs:
     - name: Create Tunnel
 
       run: .\ngrok\ngrok.exe tcp 3389
+    - name: Create Tunnel
+
+      run: .\ngrok\ngrok.exe tcp 3389
 
